# PiTwins

./: .gitignore  CMakeLists.txt  PiTwins.cpp  README.md
PiTinwsClient/: CMakeLists.txt
PiTwins/: CMakeLists.txt
PiTwins/private/: StatusPublisher.cpp
PiTwins/public/: CVDetector.h  time_util.h
Private/: CameraMsgProcessor.cpp  CameraServer.cpp  HeartbeatMsgProceesor.cpp  ServoMsgProcessor.cpp  VideoPublisher.cpp
Public/: CVDetector.h  CameraMsgProcessor.h  CameraServer.h  FrameTask.h  HeartbeatMsgProcessor.h  MessageProcessor.h  MessageReceiver.h  Publisher.h  ServerMsgDispatcher.h  ServerMsgReceiver.h  ServoMsgProcessor.h  StatusPublisher.h  VideoPublisher.h
VideoServer/Private/: VideoServer.cpp
VideoServer/Public/: VideoServer.h
private/: VideoPublisher.cpp
public/: Frame.h  Publisher.h  VideoPublisher.h  servo.h
